--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <link rel="icon" type="image/png" href="/favicon.png" />
-    <title>FlyGOn</title>
+    <title>Flygon</title>
   </head>
 
   <body>
